# gildedrose-kata-cpp

./: CMakeLists.txt  README.md
lib/googletest/: CONTRIBUTING.md
lib/googletest/docs/: advanced.md  gmock_cook_book.md  pkgconfig.md  primer.md
lib/googletest/docs/_layouts/: default.html
lib/googletest/googletest/include/gtest/: gtest-param-test.h
lib/googletest/googletest/include/gtest/internal/: gtest-port.h
src/: CMakeLists.txt  GildedRose.cpp  GildedRose.h
test/: CMakeLists.txt  GildedRoseTextTests.cpp
